# indic-modernBERT

./: .gitattributes  .gitignore  .gitmodules  CONTEXT.md  LEARNINGS.md  Makefile  README.md  main.py  pyproject.toml
.agents/skills/verify-code-correctness/: SKILL.md
configs/: tokenizer.yaml
configs/evals/: hindi_phase1.yaml  hindi_phase2.yaml  hindi_retrieval.yaml  hindi_transfer.yaml
configs/hi/: tokenizer.yaml
configs/hi/evals/: hindi_phase1.yaml  hindi_phase2.yaml  hindi_retrieval.yaml  hindi_transfer.yaml
configs/hi/pretrain/: hindi_mlm.yaml  hindi_mlm_context_extension.yaml  (+1 more)
configs/model/: README.md  modernbert_base.yaml  modernbert_context_extension.yaml  modernbert_smoke.yaml  modernbert_tiny.yaml
configs/pretrain/: hindi_mlm.yaml  hindi_mlm_context_extension.yaml  hindi_mlm_phase1.yaml  hindi_mlm_smoke_50ba.yaml
configs/retrieval_finetune/: hindi_dpr.yaml  hindi_dpr_optuna.yaml
configs/sweep/: hindi_mlm_lr_sweep.yaml
docs/: LEARNINGS.md  difference.md  learning.md  learnings.md  repo_layout.md  retrieval.md
indic-modernBERT/: __init__.py  constants.py
indic-modernBERT/config/: __init__.py  hardware_alignment.py  schema.py
indic-modernBERT/dataset/: __init__.py  indiccorp_dataset.py  sangrah_dataset.py
indic-modernBERT/evals/: README.md  __init__.py  config.py  efficiency.py  mlm.py  registry.py  reporting.py  retrieval.py  retrieval_datasets.py  retrieval_finetune.py  runner.py  runtime.py  supervised.py
indic-modernBERT/model/: __init__.py  export_hf.py  factory.py
indic-modernBERT/pretrain/: Untitled  __init__.py  data.py  dataloader.py  gpu_batch.py  optimizer.py  packing.py  parquet_mlm.py  scheduler.py  sequence_packer.py  step_log.py  train.py  trainer.py  wiring.py
indic-modernBERT/scripts/: validate_superbpe.py
indic-modernBERT/tokenizer/: __init__.py
indic-modernBERT/utils/: __init__.py  log_helpers.py  paths.py  progress.py
logs/: dataloader_sweep.json
notebook/: README.md  inspect_indiccorp_parquet.ipynb  pipeline_map.ipynb  pipeline_steps.py
scripts/: compare_bpe_vocabs.py  diagnose_smoke_stages.py  export_hf.py  generate_eval_comparison_reports.py  pipeline_trace.py  prepare_retrieval_subset.py  run_evals.py  run_pretrain.py  run_retrieval_finetune.py  run_retrieval_finetune_eval_sequence.sh  upload_hf_model.py  validate_modernbert.py  validate_superbpe.py
(+884 files in other folders)
