[project]
name = "indic-modernbert"
version = "0.1.0"
description = "Extending ModernBERT to Other Indic Languages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops",
    "huggingface_hub",
    "hydra-core",
    "indic-nlp-library",
    "loguru",
    "pyarrow",
    "protobuf",
    "pydantic",
    "pyyaml",
    "tqdm",
    "tokenizers>=0.23.1",
    "torch",
    "transformers",
]

[tool.uv]
package = false

[project.optional-dependencies]
pretrain = [
    "composer",
    "torchmetrics",
]
