[project]
name = "indic-modernbert"
version = "0.1.0"
description = "Extending ModernBERT to Other Indic Languages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops",
    "huggingface_hub",
    "hydra-core",
    "indic-nlp-library",
    "loguru",
    "pyarrow",
    "protobuf",
    "pydantic",
    "pyyaml",
    "tqdm",
    "tokenizers>=0.22.0,<=0.23.0",
    "torch",
    "transformers>=4.57.1",
]

[tool.uv]
package = false

[project.optional-dependencies]
viz = [
    "matplotlib",
]
sweep = [
    "hydra-optuna-sweeper",
]
pretrain = [
    "composer",
    "numba",
    "tensorboard",
    "torch-optimi",
    "torchmetrics",
    # flash-attn: unpadded RoPE + FA2 varlen (install manually if uv sync fails to build):
    #   mkdir -p .tmp && TMPDIR=$PWD/.tmp uv pip install 'flash-attn>=2.6.3' --no-build-isolation
]
